@@ -1,21 +1,40 @@
 #! /bin/sh
 
-# Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
 tests=omegaware/tests
 
 test -d $tests || mkdir -p $tests
 
+echo && echo "*** odvicopy -help"
+./odvicopy -help || exit 1
+
+echo && echo "*** odvicopy -version"
+./odvicopy -version || exit 1
+
+# Test page selection
+#
+echo && echo "*** odvicopy --p=*.*.2 --max=1 pagenum.dvi xpagenum.dvi >xpagenum.log"
+TEXMFCNF=$srcdir/../kpathsea \
+  TFMFONTS=$srcdir/tests \
+  ./odvicopy --p=\*.\*.2 --max=1 $srcdir/tests/pagenum.dvi $tests/xpagenum.dvi \
+    >$tests/xpagenum.log || exit 1
+
+echo && echo "*** grep '1 page written\.$' xpagenum.log"
+grep '1 page written\.$' $tests/xpagenum.log || exit 1
+
 # First a straight copy
 #
 rm -f ofont*vf
 
+echo && echo "*** odvicopy ofontd0 xofontd1 (without VF/OVF files)"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   OVFFONTS=. \
   ./odvicopy $srcdir/$tests/ofontd0 $tests/xofontd1 || exit 1
 
+echo && echo "*** odvitype xofontd1 >xofontd1.typ"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   ./odvitype $tests/xofontd1 | sed '1s/ (.*)$//' >$tests/xofontd1.typ || exit 1
@@ -26,26 +45,30 @@ diff $srcdir/$tests/ofontd1.typ $tests/xofontd1.typ || exit 1
 #
 cp $srcdir/$tests/ofontv*vf .
 
+echo && echo "*** odvicopy ofontd1 xofontd2 (with VF/OVF files for ofontv[4-6])"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   OVFFONTS=. \
   ./odvicopy $tests/xofontd1 $tests/xofontd2 || exit 1
 
+echo && echo "*** odvitype xofontd2 >xofontd2.typ"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   ./odvitype $tests/xofontd2 | sed '1s/ (.*)$//' >$tests/xofontd2.typ || exit 1
 
 diff $srcdir/$tests/ofontd2.typ $tests/xofontd2.typ || exit 1
 
-# Finally with OVF files for ofontr[1-3] and ofontv[4-6]
+# Finally with VF/OVF files for ofontr[1-3] and ofontv[4-6]
 #
 cp $srcdir/$tests/ofontr*vf .
 
+echo && echo "*** odvicopy ofontd0 xofontd3 (with VF/OVF files for ofontr[1-3] and ofontv[4-6])"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   OVFFONTS=. \
   ./odvicopy $srcdir/$tests/ofontd0 $tests/xofontd3 || exit 1
 
+echo && echo "*** odvitype xofontd3 >xofontd3.typ"
 TEXMFCNF=$srcdir/../kpathsea \
   OFMFONTS=$srcdir/$tests \
   ./odvitype $tests/xofontd3 | sed '1s/ (.*)$//' >$tests/xofontd3.typ || exit 1
